# AirQualityMonitor

./: CMakeLists.txt
components/aws_setup/: CMakeLists.txt  aws_setup.c  aws_setup.h  mqtt.c  mqtt.h
components/button_specifics/: CMakeLists.txt  power_button.c  power_button.h
components/certifications/: amazon_root_ca_cert.h  device_certification.h  private_key.h
components/display/: CMakeLists.txt  get_sensor_data.c  get_sensor_data.h  iaq_ui.c  iaq_ui.h  ui_screen_inits.c  ui_screen_inits.h  user_control.c  user_control.h
components/gpio_setup/: CMakeLists.txt  UserButtons.c  Userbuttons.h  i2c_config.c  i2c_config.h  pin_config.c  pin_config.h
components/sensirion_files_voc/: CMakeLists.txt  sensirion_gas_index_algorithm.h
components/sensors/: CMakeLists.txt  co2_sensor.c  co2_sensor.h  general_sensors.c  general_sensors.h  sensor_tasks.c  sensor_tasks.h  temp_sensor.c  temp_sensor.h  voc_sensor.c  voc_sensor.h
components/web_ui/: CMakeLists.txt  esp_web_server.c  esp_web_server.h  get_sensor_data.c  get_sensor_data.h  wifi.c  wifi.h
config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
esp-idf/: cmake_install.cmake
esp-idf/app_trace/: cmake_install.cmake
esp-idf/app_update/: cmake_install.cmake
esp-idf/azure_setup/: cmake_install.cmake
esp-idf/bootloader/: cmake_install.cmake
esp-idf/bootloader_support/: cmake_install.cmake
esp-idf/bt/: cmake_install.cmake
esp-idf/cmock/: cmake_install.cmake
esp-idf/cxx/: cmake_install.cmake
gpio_setup/: CMakeLists.txt  pin_config.c  pin_config.h
main/: CMakeLists.txt  main.c
(+80 files in other folders)
